tempfile/bon/tests/integration/ui/compile_fail/private_fields_access.stderr
error: use of deprecated field `SutSutBuilder::__unsafe_private_phantom`: this field should not be used directly; it's an implementation detail, and if you access it directly, you may break some internal unsafe invariants; if you found yourself needing it, then you are probably doing something wrong; feel free to open an issue/discussion in our GitHub repository (https://github.com/elastio/bon) or ask for help in our Discord server (https://bon-rs.com/discord)
  --> tests/integration/ui/compile_fail/private_fields_access.rs:19:9
   |
19 |         __unsafe_private_phantom: _,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/integration/ui/compile_fail/private_fields_access.rs:1:9
   |
1  | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(deprecated)]` implied by `#[deny(warnings)]`

error: use of deprecated field `SutSutBuilder::__unsafe_private_start_fn_args`: this field should not be used directly; it's an implementation detail, and if you access it directly, you may break some internal unsafe invariants; if you found yourself needing it, then you are probably doing something wrong; feel free to open an issue/discussion in our GitHub repository (https://github.com/elastio/bon) or ask for help in our Discord server (https://bon-rs.com/discord)
  --> tests/integration/ui/compile_fail/private_fields_access.rs:20:9
   |
20 |         __unsafe_private_start_fn_args: _,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: use of deprecated field `SutSutBuilder::__unsafe_private_receiver`: this field should not be used directly; it's an implementation detail, and if you access it directly, you may break some internal unsafe invariants; if you found yourself needing it, then you are probably doing something wrong; feel free to open an issue/discussion in our GitHub repository (https://github.com/elastio/bon) or ask for help in our Discord server (https://bon-rs.com/discord)
  --> tests/integration/ui/compile_fail/private_fields_access.rs:21:9
   |
21 |         __unsafe_private_receiver: _,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: use of deprecated field `SutSutBuilder::__unsafe_private_named`: this field should not be used directly; it's an implementation detail, and if you access it directly, you may break some internal unsafe invariants; if you found yourself needing it, then you are probably doing something wrong; feel free to open an issue/discussion in our GitHub repository (https://github.com/elastio/bon) or ask for help in our Discord server (https://bon-rs.com/discord)
  --> tests/integration/ui/compile_fail/private_fields_access.rs:22:9
   |
22 |         __unsafe_private_named: _,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
